jena-shex/src/test/files/spec/negativeSyntax/tripleConsraint-with-datatype-and-dot.shex
# tripleConsraint with datatype and dot
<http://a.example/IssueShape> {
   <http://a.example/p1> <http://a.example/dt1> .
}
